# todux

./: .gitignore  Cargo.toml  LICENCE  LICENSE  README.MD
.github/workflows/: cd.yml  ci.yml
src/: cli.rs  command.rs  database.rs  key_binding.rs  log.rs  main.rs  sys.rs  todo.rs  workspace.rs
src/ui/: todolist.rs  view_list.rs
src/utils/: mod.rs
