[package]
name = "rust-todo-cli"
version = "0.1.0"
authors = ["sf3ris <vale.piz92@hotmail.it>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tui = "0.15"
termion = "1.5.1"
chrono = "0.4"
