[package]
name = "todux"
version = "0.1.1"
authors = ["sf3ris <sf3ris@protonmail.com>"]
edition = "2018"
description = "todux is a simple yet fast todo manager via CLI"
homepage = "https://github.com/sf3ris/todux"
keywords = [
    "todo",
    "cli",
    "tui"
]
license = "MIT"
repository = "https://github.com/sf3ris/todux"
readme = "README.MD"

[[bin]]
name = "todux"
path = "src/main.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tui = "0.15"
termion = "1.5.1"
chrono = "0.4"
